<resources>
    <string name="app_name">help!</string>

    <string name="api_key">AIzaSyDcMIcnAcc3lZB-XGr-xVyiVfExQ-_L4jA</string>
    <string name="username">User Name</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="remember_me">Remember Me</string>
    <string name="login_success">Log-In Successful</string>
    <string name="login_fail">One or More Log-In Fields is Invalid</string>
    <string name="empty_fields">One or More Fields is Empty</string>
    <string name="name_field">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="birthday">Birthday</string>
    <string name="signup_fail">One or More Sign-Up Fields is Invalid</string>
    <string name="signup_success">Sign-Up Successful</string>
    <string name="login_button_text">Log-In To An Existing Account</string>
    <string name="signup_button_text">Sign-Up For A New Account</string>
    <string name="job_list">Opportunities List</string>
    <string name="profile">Profile</string>
    <string name="post_job">Post New Opportunity</string>
    <string name="map">Map</string>
    <string name="action_refresh">Refresh</string>
    <string name="confirm_job">Are you sure you would like to participate in this volunteering opportunity?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="job_added">Congratulations. You are officially signed up!</string>
    <string name="signup_for_job">Sign up for this Opportunity</string>
    <string name="user_rating">Rating</string>
    <string name="currently_enrolled">Currently Participating In: </string>
    <string name="previously_enrolled">Has Participated In: </string>
    <string name="opportunities">opportunities</string>
    <string name="age">Age:</string>
    <string name="date">Date:</string>
    <string name="job_title">Opportunity Title</string>
    <string name="job_desc">Opportunity Description</string>
    <string name="job_addr">Street</string>
    <string name="job_city">City</string>
    <string name="job_state">State</string>
    <string name="job_zip">Zip Code</string>
    <string name="select_date">Select the Date of the Opportunity from the Calendar.</string>
    <string name="enter_addr">Enter the Address where the Opportunity will take place.</string>
    <string name="job_created">Congratulations, your job was been successfully posted!</string>
    <string name="invalid">One or more fields is empty or invalid. Please try again.</string>
    <string name="new_to_help">New to help!? Click here to Sign Up!</string>
    <string name="pick_start">Start Time</string>
    <string name="pick_end">End Time</string>
    <string name="start_and_end">Select an estimated start and end time for the opportunity.</string>
    <string name="comment">Comment</string>
    <string name="post">Post</string>
    <string name='comment_empty'>Comment field is empty. Nothing to post.</string>
    <string name="click_to_comment">View this Opportunity\'s comments.</string>
    <string name="sign_up_for_job">Sign up for this Opportunity</string>
    <string name="comment_posted">Comment successfully posted</string>
    <string name="click_to_select">Click to select a profile image.</string>
    <string name="profile_img_selected">Profile image successfully selected.</string>
    <string name="take_me">Take me to this Opportunity</string>
</resources>
