<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.FormFragment"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/job_title_f"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/job_title"
                android:inputType="textPersonName"
                android:textSize="30sp" />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="15dp" />

            <EditText
                android:id="@+id/job_desc_f"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/job_desc"
                android:inputType="textPersonName"
                android:textSize="22sp" />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_addr"
                android:textAlignment="center"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/job_addr_f"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/job_addr"
                android:inputType="textPersonName"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/job_city_f"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/job_city"
                android:inputType="textPersonName"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/job_state_f"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/job_state"
                android:inputType="textPersonName"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/job_zip_f"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/job_zip"
                android:inputType="textPersonName"
                android:textSize="22sp" />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_date"
                android:textAlignment="center"
                android:textSize="16sp" />

            <CalendarView
                android:id="@+id/calendar_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_and_end"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <Button
                        android:id="@+id/start_button"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/pick_start" />

                    <Button
                        android:id="@+id/end_button"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/pick_end" />
                </TableRow>

            </TableLayout>

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/confirm_button_f"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm" />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="15dp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>