<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.ProfileFragment"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <ImageView
        android:id="@+id/profile_img"
        android:layout_width="195dp"
        android:layout_height="138dp"
        android:layout_gravity="center"
        android:src="@drawable/icons8_user_24" />

    <TextView
        android:id="@+id/fullname_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Full Name"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/username_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="User Name"
        android:textAlignment="center"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/age_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Age"
        android:textAlignment="center"
        android:textSize="20sp" />

    <android.support.v4.widget.Space
        android:layout_width="wrap_content"
        android:layout_height="15dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/rating_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_rating"
                android:textSize="18sp"
                tools:text="@string/user_rating" />

            <TextView
                android:id="@+id/rating_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="test"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/current_tv"
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:text="@string/currently_enrolled"
                android:textSize="18sp"
                tools:text="@string/currently_enrolled" />

            <TextView
                android:id="@+id/currently_enrolled_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="test"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/past_tv"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:text="@string/previously_enrolled"
                android:textSize="18sp"
                tools:text="@string/previously_enrolled" />

            <TextView
                android:id="@+id/past_enrolled_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="test"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="331dp"
            android:layout_height="17dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/logout_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:text="Logout" />
        </TableRow>

    </TableLayout>

</LinearLayout>